force-app/main/default/objects/ProdQuoteToOppProduct__c/ProdQuoteToOppProduct__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product For Prod. Quotes</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Production Quote Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Product For Prod. Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>