force-app/main/default/objects/ProdQuoteToOppProduct__c/fields/check_cdd_120__c.field-meta.xml
<CustomField>
    <fullName>check_cdd_120__c</fullName>
    <formula>AND(CDD__c &lt; Last_Day_NextMonth__c  ,CDD__c &gt; Date_Four_Month_Ago__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check cdd 120</label>
    <type>Checkbox</type>
</CustomField>