force-app/main/default/objects/ProdQuoteToOppProduct__c/fields/Creation_Date_Opportunity_Item__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date_Opportunity_Item__c</fullName>
    <label>Creation Date Opportunity Item</label>
    <type>DateTime</type>
</CustomField>