force-app/main/default/objects/ProdQuoteToOppProduct__c/fields/Date_Four_Month_Ago__c.field-meta.xml
<CustomField>
    <fullName>Date_Four_Month_Ago__c</fullName>
    <formula>Last_Day_NextMonth__c - 120</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Four Month Ago</label>
    <type>Date</type>
</CustomField>