force-app/main/default/objects/ProdQuoteToOppProduct__c/fields/ITE_Number__c.field-meta.xml
<CustomField>
    <fullName>ITE_Number__c</fullName>
    <label>ITE Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>