force-app/main/default/objects/ProdQuoteToOppProduct__c/fields/Last_Day_NextMonth__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_NextMonth__c</fullName>
    <formula>DATE( Year(ADDMONTHS(TODAY(),2)),MONTH( ADDMONTHS(TODAY(),2)),1 ) -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Day Next Month</label>
    <type>Date</type>
</CustomField>