force-app/main/default/objects/ProdQuoteToOppProduct__c/fields/Name_Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Name_Opportunity_Product__c</fullName>
    <label>Name Opportunity Product</label>
    <length>376</length>
    <type>LongTextArea</type>
</CustomField>