force-app/main/default/objects/ProdQuoteToOppProduct__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Product For Prod. Quotes</relationshipLabel>
    <relationshipName>Opportunity_Product_For_Prod_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>