force-app/main/default/objects/ProdQuoteToOppProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Product For Prod. Quotes</relationshipLabel>
    <relationshipName>Opportunity_Product_For_Prod_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>