force-app/main/default/objects/ProdQuoteToOppProduct__c/fields/Production_Plan__c.field-meta.xml
<CustomField>
    <fullName>Production_Plan__c</fullName>
    <formula>Sales_Plan_and_Fact__r.Production_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Production Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>