force-app/main/default/objects/ProdQuoteToOppProduct__c/fields/Production_Quota__c.field-meta.xml
<CustomField>
    <fullName>Production_Quota__c</fullName>
    <label>Production Quota</label>
    <referenceTo>Production_Quota__c</referenceTo>
    <relationshipName>testProdQuoteToOppProds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>