force-app/main/default/objects/ProdQuoteToOppProduct__c/fields/Quota_Type__c.field-meta.xml
<CustomField>
    <fullName>Quota_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quota Type</label>
    <referenceTo>QuotaType__c</referenceTo>
    <relationshipLabel>Opportunity Product For Prod. Quotes</relationshipLabel>
    <relationshipName>Opportunity_Product_For_Prod_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>