force-app/main/default/objects/ProdQuoteToOppProduct__c/fields/Sales_Plan_and_Fact__c.field-meta.xml
<CustomField>
    <fullName>Sales_Plan_and_Fact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Plan and Fact</label>
    <referenceTo>SalesPlanFact__c</referenceTo>
    <relationshipLabel>Opportunity Product For Prod. Quotes</relationshipLabel>
    <relationshipName>Opportunity_Product_For_Prod_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>