force-app/main/default/objects/ProdQuoteToOppProduct__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shop</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Opportunity Product For Prod. Quotes</relationshipLabel>
    <relationshipName>Opportunity_Product_For_Prod_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>